--- a/.gitignore
+++ b/.gitignore
@@ -68,36 +68,59 @@ docs/_build/
 
 # PyBuilder
 target/
-
-# Jupyter Notebook
 .ipynb_checkpoints
 
-# pyenv
-.python-version
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# celery beat schedule file
-celerybeat-schedule
+# C extensions
+*.so
 
-# SageMath parsed files
-*.sage.py
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# dotenv
-.env
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# virtualenv
-.venv
-venv/
-ENV/
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
 
-# Rope project settings
-.ropeproject
+# Translations
+*.mo
+*.pot
 
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
+# Django stuff:
+*.log
